--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -10,7 +10,9 @@ on:
       - main
 
 jobs:
+
   build:
+
     strategy:
       matrix:
         configuration: [Release]
@@ -18,7 +20,7 @@ jobs:
     runs-on: windows-2019
 
     env:
-      Solution_Name: ForsHops.sln
+      Solution_Name: ForsHops.sln    #文件名                     # Replace with your solution name, i.e. MyWpfApp.sln.
 
     steps:
     - name: Checkout
@@ -26,25 +28,27 @@ jobs:
       with:
         fetch-depth: 0
 
+    # Install the .NET Core workload
     - name: Install .NET Core
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
 
+    # Add MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
 
-    - name: Restore and Build the application
+    # Restore the application to populate the obj folder with RuntimeIdentifiers
+    - name: Restore the application
+      # run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
       run: |
-        msbuild ${{ github.workspace }}/ForsHops.sln /t:Restore,Build /p:Configuration=${{ matrix.configuration }}
+        msbuild ${{ github.workspace }}\ForsHops.sln   # 这里路径要看好，写sln或者csproj的
       env:
         Configuration: ${{ matrix.configuration }}
 
-    - name: Verify Build Output
-      run: dir "${{ github.workspace }}/ForsHops/bin/Release"
-
+    # Upload the artifact 
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
         name: ForsHops
-        path: ${{ github.workspace }}/ForsHops/bin/Release/**
+        path: ${{ github.workspace }}
